@@ -26,7 +26,5 @@ Suggests:
     randomForest,
     rpart,
     testthat
-LazyData: yes
-ByteCompile: yes
-Version: 1.4.2
-RoxygenNote: 7.1.0
+Version: 1.4.3
+RoxygenNote: 7.1.2
