@@ -12,12 +12,12 @@ citEntry(entry = "Article",
   volume       = "64",
   number       = "11",
   pages        = "1--25",
-  url          = "http://www.jstatsoft.org/v64/i11/",
+  url          = "https://www.jstatsoft.org/v64/i11/",
 
   textVersion  =
   paste("Bernd Bischl, Michel Lang, Olaf Mersmann, Joerg Rahnenfuehrer, Claus Weihs (2015).",
         "BatchJobs and BatchExperiments: Abstraction Mechanisms for Using R in Batch Environments.",
         "Journal of Statistical Software, 64(11), 1-25.",
-        "URL http://www.jstatsoft.org/v64/i11/.")
+        "URL https://www.jstatsoft.org/v64/i11/.")
 )
 
